<resources>
    <string name="app_name" translatable="false">GyroWheel</string>
    <string name="brakeText">Brake</string>
    <string name="accelerateText">Accelerate</string>
    <string name="toggle_brake_buttonText">Toggle Brake Button</string>
    <string name="toggle_accelerate_buttonText">Toggle Accelerate Button</string>
    <string name="button_Y" translatable="false">Y</string>
    <string name="button_X" translatable="false">X</string>
    <string name="button_B" translatable="false">B</string>
    <string name="button_A" translatable="false">A</string>
    <string name="button_RB" translatable="false">RB</string>
    <string name="button_RT" translatable="false">RT</string>
    <string name="button_LB" translatable="false">LB</string>
    <string name="button_LT" translatable="false">LT</string>
    <string name="button_R3" translatable="false">R3</string>
    <string name="button_L3" translatable="false">L3</string>
    <string name="button_Start">Start</string>
    <string name="button_Back">Back</string>
    <string name="network_udp_all_buttons">Gamepad Mode</string>
    <string name="network_udp">GyroWheel Mode</string>
    <string name="enter_ip_address">Enter IP Address</string>
    <string name="http_192_168_1_36_5000" translatable="false">http://192.168.1.37:5000</string>
    <string name="_192_168_1_36" translatable="false">192.168.1.37</string>
    <string name="ArrowUL" translatable="false">˂˄</string>
    <string name="buttonAU" translatable="false">˄</string>
    <string name="buttonAUR" translatable="false">˄˃</string>
    <string name="buttonAL" translatable="false">˂</string>
    <string name="buttonAR" translatable="false">˃</string>
    <string name="buttonADL" translatable="false">˂˅</string>
    <string name="buttonADR" translatable="false">˅˃</string>
    <string name="buttonAD" translatable="false">˅</string>
    <string name="bluetooth_connection">GyroWheel Mode</string>
    <string name="enter_bluetooth_mac_address">Enter Bluetooth Mac Address</string>
    <string name="e8_48_b8_c8_20_00" translatable="false">E8:48:B8:C8:20:00</string>
    <string name="search_computers_on_bluetooth">Search Computers on Bluetooth</string>
    <string name="bluetooth_all_buttons">Gamepad Mode</string>
    <string name="connect_to_mac_address">Connect to MAC address</string>
    <string name="forwarded_socket">Forwarded Socket</string>
    <string name="disable_sensor">Disable Sensor</string>
    <string name="edit_layout">EDIT Layout</string>
    <string name="use_custom_layout">Use Custom Layout</string>
    <string name="privacy_policy">PRIVACY POLICY</string>
    <string name="see_ad_amp_support_me"><![CDATA[See ad&support me]]></string>
    <string name="show_bluetooth_computers">Show Bluetooth Computers</string>
    <string name="use_network">Use Network</string>
    <string name="use_bluetooth">Use Bluetooth</string>
    <string name="settings">SETTINGS</string>
    <string name="sensorMultiplierExplanation"> Be aware that not using default multiplier(25) might result in analog stick to reach highest value sooner or not being able to reach highest value at all. Small movements can be interpreted as a lot, or it can\'t be registered at all.</string>
    <string name="sensorMultiplier">Adjust the value for sensor multiplier:</string>
    <string name="touchMultiplier">Adjust the value for touch multiplier:</string>
    <string name="seekBarTouchMultiplierExplanation">Be aware that not using default multiplier(25) might result in analog stick to reach highest value sooner or not being able to reach highest value at all. Small movements can be interpreted as a lot, or it can\'t be registered at all.</string>
    <string name="seekBarSmoothMultiplierExplanation">  Smoothing factor(Lower is smoother but delayed, higher is jankier but faster.)</string>
    <string name="triggerMultiplier">Adjust the value for trigger touch multiplier:</string>
    <string name="seekBarTriggerMultiplierExplanation">Use this bar to adjust multiplier for trigger buttons. This is only useful when the switch above is turned on</string>
    <string name="smoothMultiplier">Adjust the value for smoothing multiplier:</string>
    <string name="no_rotation_sensor">This mode relies solely on Rotation sensors which your device doesn\'t have any suitable</string>
    <string name="invalid_mac">Invalid MAC address</string>
    <string name="button_available_after_conn">Buttons will become available on successful connection.</string>
    <string name="click_after_perm">Click the button again after giving the permission</string>
    <string name="conf_layout_explain">Drag and drop or pinch buttons to configure layout.</string>
    <string name="no_sensor">No suitable sensor available</string>
    <string name="using_accelerometer">Gravity and Rotation Vector Sensor is not available. Using Accelerometer as fallback.</string>
    <string name="using_rotation">Gravity Sensor is not available. Using Rotation Vector Sensor as fallback.</string>
    <string name="enabled_sensor">Phone rotation sensor data for left analog is enabled.</string>
    <string name="disabled_sensor">Phone rotation sensor data for left analog is disabled.</string>
    <string name="use_edit_first">Use Edit Layout button to set a layout first.</string>
    <string name="thank_you">Thank you for your support!</string>
    <string name="ad_not_ready">Ad is not ready yet, please press the button again.</string>
    <string name="ad_loading">Ads only start to load when pressed. Press again in a bit.</string>
    <string name="switchAnalogTrigger"> Enable this to make your gamepad triggers analog, and pull down on them to adjust input.</string>
    <string name="seekBarTriggerMultiplierExplanationDescription">Slide bar for adjusting Trigger Multiplier</string>
    <string name="seekBarSmoothMultiplierExplanationDescription">Slide bar for adjusting Smoothening Multiplier</string>
    <string name="seekBarTouchMultiplierExplanationDescription">Slide bar for adjusting Touch Multiplier</string>
    <string name="seekBarSensorMultiplierExplanationDescription">Slide bar for adjusting Sensor Multiplier</string>
    <string name="usage_guide">HOW TO USE</string>
    <string name="touchpad">Touchpad</string>
    <string name="keyboard_mouse">Keyboard and Mouse</string>
    <string name="left_click">Left Mouse</string>
    <string name="right_click">Right Mouse</string>
    <string name="open_close_keyboard">Open/Close Keyboard</string>
    <string name="touchpad_bar_explanation">Adjust the value for Touchpad multiplier:</string>
    <string name="slide_bar_for_adjusting_touchpad_multiplier">Slide bar for adjusting Touchpad Multiplier</string>
    <string name="touchpadMultiplier">Use this bar to adjust touchpad multiplier</string>
    <string name="ctrl" translatable="false">Ctrl</string>
    <string name="alt" translatable="false">Alt</string>
    <string name="caps" translatable="false">Caps Lock</string>
    <string name="esc" translatable="false">Esc</string>
    <string name="shift" translatable="false">SHIFT</string>
    <string name="keyboard_field" translatable="false">Keyboard Field</string>
    <string name="up_arrow" translatable="false">Up</string>
    <string name="del" translatable="false">Del</string>
    <string name="down_arrow" translatable="false">Down</string>
    <string name="right_arrow" translatable="false">Right</string>
    <string name="left_arrow" translatable="false"> Left</string>
    <string name="windows" translatable="false">Windows</string>
    <string name="tab" translatable="false">tab</string>
    <string name="volume_down" translatable="false">volume down</string>
    <string name="volume_mute" translatable="false">volume mute</string>
    <string name="volume_up" translatable="false">volume up</string>
    <string name="media_next" translatable="false">next media</string>
    <string name="media_play" translatable="false">play media</string>
    <string name="media_previous" translatable="false">previous media</string>
    <string name="please_enable_bluetooth">Please Enable Bluetooth First</string>
    <string name="permission_declined">Permissions not granted</string>
    <string name="about_ads_title">about ads title</string>
    <string name="about_ads_message">about ads message</string>
    <string name="ok" translatable="false">OK</string>
    <string name="ad_ready">ad ready</string>
    <string name="switchKeyboardVolumeButtonsText">Tick to override volume buttons to do something else</string>
    <string name="function_keys">Function Keys</string>
    <string name="f" translatable="false">F</string>
    <string-array name="volume_button_modes">
        <item>Volume Control</item>
        <item>Next Track</item>
        <item>Mouse Click</item>
        <item>Mouse Scroll</item>
    </string-array>
</resources>