<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/buttonA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_A" />

    <Button
        android:id="@+id/buttonB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_B" />
    <Button
        android:id="@+id/buttonX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_X" />
    <Button
        android:id="@+id/buttonY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_Y" />


    <Button
        android:id="@+id/buttonLB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_LB" />
    <Button
        android:id="@+id/buttonLT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_LT" />
    <Button
        android:id="@+id/buttonL3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_L3" />

    <Button
        android:id="@+id/buttonRB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_RB" />
    <Button
        android:id="@+id/buttonRT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_RT" />
    <Button
        android:id="@+id/buttonR3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_R3" />

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_Start" />
    <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_Back" />


    <Button
        android:id="@+id/buttonAUL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ArrowUL" />

    <Button
        android:id="@+id/buttonAU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonAU" />

    <Button
        android:id="@+id/buttonAUR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonAUR" />

    <Button
        android:id="@+id/buttonAL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonAL" />
    <Button
        android:id="@+id/buttonAR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonAR" />

    <Button
        android:id="@+id/buttonADL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonADL" />

    <Button
        android:id="@+id/buttonAD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonAD" />

    <Button
        android:id="@+id/buttonADR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonADR" />

    <ImageView
        android:id="@+id/leftAnalog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/circle_outer" />

    <ImageView
        android:id="@+id/rightAnalog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/circle_outer" />

    <Switch
        android:id="@+id/switchSensor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disable_sensor" />

    <ImageView
        android:id="@+id/leftAnalogKnob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/circle_inner" />

    <ImageView
        android:id="@+id/rightAnalogKnob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/circle_inner"
        />
</FrameLayout>
