<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical">

    <EditText
        android:id="@+id/editTextSocketIp"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:hint="@string/enter_ip_address"
        android:inputType="text"
        android:text="@string/_192_168_1_36" />

    <Button
        android:id="@+id/networkUdp"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_weight="1"
        android:text="@string/network_udp" />

    <Button
        android:id="@+id/networkUdpAllButtons"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_weight="1"
        android:text="@string/network_udp_all_buttons" />
    <Button
        android:id="@+id/networkUdpKeyboardMouse"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_weight="1"
        android:text="@string/keyboard_mouse" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="70dp" />

    <Button
        android:id="@+id/editLayout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/edit_layout" />

    <Switch
        android:id="@+id/useCustomLayout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_weight="1"
        android:text="@string/use_custom_layout" />
    </LinearLayout>
</ScrollView>
