<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editTextBluetoothMAC"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:hint="@string/enter_bluetooth_mac_adress"
        android:inputType="text"
        android:text="@string/e8_48_b8_c8_20_00" />

    <Button
        android:id="@+id/bluetoothConnectMAC"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_weight="1"
        android:text="@string/connect_to_mac_adress" />

    <Switch
        android:id="@+id/switchForwardedSocket"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_weight="1"
        android:text="@string/forwarded_socket" />

    <Button
        android:id="@+id/bluetooth"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_weight="1"
        android:text="@string/bluetooth_connection" />

    <Button
        android:id="@+id/bluetoothAllButtons"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_weight="1"
        android:text="@string/bluetooth_all_buttons" />

    <Button
        android:id="@+id/bluetoothShowComputers"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/show_bluetooth_computers" />

    <Button
        android:id="@+id/editLayout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/edit_layout" />

    <Switch
        android:id="@+id/useCustomLayout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_weight="1"
        android:text="@string/use_custom_layout" />

    <ListView
        android:id="@+id/listViewDevices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
