<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editTextSocketIp"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:hint="@string/enter_socket_ip_address"
        android:inputType="text"
        android:text="@string/_192_168_1_36" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/networkUdp"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/network_udp"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/networkUdpAllButtons"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/network_udp_all_buttons" />
    </LinearLayout>

    <EditText
        android:id="@+id/editTextBluetoothMAC"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/enter_bluetooth_mac_adress"
        android:inputType="text"
        android:text="@string/e8_48_b8_c8_20_00" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bluetoothConnectMAC"
            android:layout_width="286dp"
            android:layout_height="64dp"
            android:text="@string/connect_to_mac_adress" />

        <Switch
            android:id="@+id/switchForwardedSocket"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/forwarded_socket" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bluetooth"
            android:layout_width="143dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/bluetooth_connection" />

        <Button
            android:id="@+id/bluetoothAllButtons"
            android:layout_width="267dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/bluetooth_all_buttons" />

    </LinearLayout>

    <Button
        android:id="@+id/bluetoothShowComputers"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:text="@string/show_bluetooth_computers" />

    <ListView
        android:id="@+id/listViewDevices"
        android:layout_width="match_parent"
        android:layout_height="171dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/editLayout"
            android:layout_width="210dp"
            android:layout_height="61dp"
            android:text="@string/edit_layout" />

        <Switch
            android:id="@+id/useCustomLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/use_custom_layout" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonPrivacyPolicy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/privacy_policy" />

    <Button
        android:id="@+id/buttonSupportMe"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:text="@string/see_ad_amp_support_me" />

    <!--Button
        android:id="@+id/bluetoothLe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bluetooth_le" /-->


</LinearLayout>
