<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonLT"
                android:layout_width="0dp"
                android:layout_margin="2dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_LT" />

            <Button
                android:id="@+id/buttonLB"
                android:layout_width="0dp"
                android:layout_margin="2dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_LB" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <ImageView
                android:id="@+id/leftAnalog"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/circle_outer" />

            <ImageView
                android:id="@+id/leftAnalogKnob"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/circle_inner" />
            </FrameLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonAUL"
                android:layout_margin="1dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ArrowUL" />

            <Button
                android:id="@+id/buttonAU"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="2"
                android:text="@string/buttonAU" />

            <Button
                android:id="@+id/buttonAUR"
                android:layout_margin="1dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/buttonAUR" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonAL"
                android:layout_margin="1dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/buttonAL" />

            <Button
                android:id="@+id/buttonAR"
                android:layout_margin="1dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/buttonAR" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonADL"
                android:layout_margin="1dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/buttonADL" />

            <Button
                android:id="@+id/buttonAD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="2"
                android:text="@string/buttonAD" />

            <Button
                android:id="@+id/buttonADR"
                android:layout_margin="1dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/buttonADR" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/button_Start" />

            <Button
                android:id="@+id/buttonBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/button_Back" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonL3"
                android:layout_margin="2dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_L3" />

            <Button
                android:id="@+id/buttonR3"
                android:layout_margin="2dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_R3" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3" />

        <Switch
            android:id="@+id/switchSensor"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:text="@string/disable_sensor" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonRB"
                android:layout_width="0dp"
                android:layout_margin="2dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_RB" />

            <Button
                android:id="@+id/buttonRT"
                android:layout_width="0dp"
                android:layout_margin="2dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_RT" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonY"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:layout_marginBottom="0dp"
            android:text="@string/button_Y" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:layout_marginBottom="0dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonX"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:layout_marginBottom="0dp"
                android:text="@string/button_X" />

            <Button
                android:id="@+id/buttonB"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:layout_marginBottom="0dp"
                android:text="@string/button_B" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonA"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:layout_marginBottom="0dp"
            android:text="@string/button_A" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
        <ImageView
            android:id="@+id/rightAnalog"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/circle_outer" />

        <ImageView
            android:id="@+id/rightAnalogKnob"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/circle_inner" />

            </FrameLayout>
        </LinearLayout>

    </LinearLayout>



</LinearLayout>