<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/buttonA"
        android:layout_width="match_parent"
        android:layout_height="7dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/brakeText"
        android:textAllCaps="false"
        android:textSize="20sp" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchA"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/toggle_brake_buttonText" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchB"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/toggle_accelerate_buttonText" />

    <Button
        android:id="@+id/buttonB"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/accelerateText"
        android:textAllCaps="false"
        android:textSize="20sp" />

</LinearLayout>
