<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="222dp"
        app:srcCompat="@drawable/app" />

    <Button
        android:id="@+id/useNetwork"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/use_network" />

    <Button
        android:id="@+id/useBluetooth"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/use_bluetooth" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="70dp" />

    <Button
        android:id="@+id/buttonPrivacyPolicy"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/privacy_policy" />

    <Button
        android:id="@+id/buttonSupportMe"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/see_ad_amp_support_me" />
</LinearLayout>
